2002-09-14  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Taking a guess to fix the 'savegump repaint' bug.
	* drag.cc (Dragging_info): If not dragging, don't paint!

2002-09-13  Jeff Freedman  <jeff@amy.nerble.net>

	* keyactions.cc,etc: USEFOOD added to support SI goblet.
	* gamewin.cc:  activate_item() now returns true/false.

2002-09-12  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: In BG, get_shape_real() should only return the normal
	2 possible shapes for the Avatar.

2002-09-11  Dominik Reichardt  <dominus@users.sourceforge.net>
	* docs/xml/*.xml: updated and/or spellchecked
	* docs/*.html, exult_studio.txt: updated and/or spellchecked
	* FAQ, ReadMe : updated and spellchecked

2002-08-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* intrinsics.cc: reverted click_on_item change from 2002-08-02
	(it broke hitting Draygan with sleep arrows)
	* intrinsics.cc: restored mentioned change, but for the avatar only

2002-08-27  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc:  It's now okay to show rain/clouds when gumps are shown.
	* tqueue.cc: Got to fix time when tqueue is paused (like when
	gumps are open).
	* gumps/Spellbook_gump.cc:  Close all gumps after casting spell.
	* objs/objs.cc: Weapons with 0 HP's should never do damage.

2002-08-26  Aurelien Marchand  <artaxerxes@users.sf.net>

	* configure.in: Added -FMOPL and disabled debug in configure.in for the zaurus. 
	* audio/Midi.cc: Make it work on the zaurus
	* imagewin/imagewin.cc: prevent fullscreen at all cost for the zaurus or it would crash

2002-08-23  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.h: Fixed "in_usecode()" so it works with new
	stack-frames. 
	* usecode/ucsched.cc (Usecode_script): Don't purge script if it
	has already started.

2002-08-22  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.h (public): Added is_pos_invalid().
	* effects.cc:  Don't delete 'explode' if already off map.
