@@ -189,9 +189,12 @@ class Patrol_schedule : public Schedule
 	int pathnum;			// # of next we're heading towards.
 	int dir;			// 1 or -1;
 	int failures;			// # of failures to find marker.
+	bool sitting;			// Sat down for one of the paths.
+	bool find_next;			// Search for next path object.
 public:
 	Patrol_schedule(Actor *n)
-		: Schedule(n), pathnum(-1), dir(1), failures(0)
+		: Schedule(n), pathnum(-1), dir(1), failures(0),
+		  sitting(false), find_next(true)
 		{  }
 	virtual void now_what();	// Now what should NPC do?
 	};
